--- a/compounding/compounding-11.html
+++ b/compounding/compounding-11.html
@@ -16,115 +16,115 @@
 
 <body>
     <div class="container-fluid">
-        
-           
 
 
-            <!---------------- SLIDE 24  - EXERCISES -->
-            <!-- exercises2-slide6 :  problem 4 -->
-            <div id="exercises2-slide6" class="slide exercise-slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <!-- <h3 class="secondary-title">Exercises</h3> -->
-                    </div>
+
+
+        <!---------------- SLIDE 24  - EXERCISES -->
+        <!-- exercises2-slide6 :  problem 4 -->
+        <div id="exercises2-slide6" class="slide exercise-slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
-                <nav class="row">
-                    <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
-                    <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
-                    <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-9.html">Exercises</a></div>
-                    <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-9.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
 
-                            <h4>Exercise 4: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
-                            <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
-                            <div class="container">
-                                <div class="">
-                                    <form action="" class="indent">
-                                        <label> </label>
-                                        <input id="pvalue-ex4" type="number"><br>
-                                        <label> </label>
-                                        <input id="fvalue-ex4" type="number" placeholder="0"><br>
-                                        <label>&nbsp;&nbsp;&nbsp;i </span></label>
-                                        <input id="int-ex4" type="number" placeholder="00"><br>
-                                        <label>&nbsp;&nbsp; </label>
-                                        <input id="yrs-ex4" type="number" placeholder="0"><br>
-                                        <label>&nbsp;m</span> </label>
-                                        <input id="cmpd-ex4" type="number" placeholder="0"><br>
-                                    </form>
-                                    <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
-                                </div>
-                                <br>
-                                <div class="answer" id="answer-ex4"></div>
+                        <h4>Exercise 4: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
+                        <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="pvalue-ex4" type="number"><br>
+                                    <label> </label>
+                                    <input id="fvalue-ex4" type="number"><br>
+                                    <label>&nbsp;&nbsp;&nbsp;i </span></label>
+                                    <input id="int-ex4" type="number" placeholder="00"><br>
+                                    <label>&nbsp;&nbsp; </label>
+                                    <input id="yrs-ex4" type="number"><br>
+                                    <label>&nbsp;m</span> </label>
+                                    <input id="cmpd-ex4" type="number"><br>
+                                </form>
+                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
+                            <br>
+                            <div class="answer" id="answer-ex4"></div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">24</div>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="back btn">Back</button>
+                    <button type="button" class="continue btn">Continue</button>
                 </div>
             </div>
-
-
-   
-
-
-            <!---------------- SLIDE 26  - EXERCISES -->
-            <!-- exercises2-slide8 :   problem 5 -->
-            <div id="exercises2-slide8" class="slide exercise-slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <!-- <h3 class="secondary-title">Exercises</h3> -->
-                    </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">24</div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
+            </div>
+        </div>
 
-                            <h4>Exercise 5: Calculate the Unknown Variable</h4>
-                            <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
-                            <div class="container">
-                                <div class="">
-                                    <form action="" class="indent">
-                                        <label> </label>
-                                        <input id="fvalue-ex5" type="number" placeholder="0.00"><br>
-                                    </form>
-                                    <button onclick="exercise_5()" type="button" class="btn calculate-btn">Submit</button>
-                                </div>
-                                <br>
-                                <div class="answer" id="answer-ex5"></div>
+
+
+
+
+        <!---------------- SLIDE 26  - EXERCISES -->
+        <!-- exercises2-slide8 :   problem 5 -->
+        <div id="exercises2-slide8" class="slide exercise-slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Exercises</h3> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+
+                        <h4>Exercise 5: Calculate the Unknown Variable</h4>
+                        <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="fvalue-ex5" type="number"><br>
+                                </form>
+                                <button onclick="exercise_5()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
+                            <br>
+                            <div class="answer" id="answer-ex5"></div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">26</div>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="back btn">Back</button>
+                    <button type="button" class="continue btn">Continue</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">26</div>
+                </div>
+            </div>
+        </div>
 
 
-   
+
 
 
     </div> <!--  end of container -->
