ear almost complete, ex1 complete

--- a/formulas/formulas-5.html
+++ b/formulas/formulas-5.html
@@ -70,7 +70,7 @@
                                         <p><span class="math">\(259.37=PV(2.5937)\)</span></p>
                                     </li>
                                     <li>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the matching numbers in the fraction.
-                                        <div><span class="math" style="font-size: 1.5em;">\(\frac{259.37}{2.5937}=\frac{PV{\cancel{(2.5937)}}}{\cancel{2.5937}}\)</span></div>
+                                        <div><span class="math" style="font-size: 1.5em;">\(\require{cancel}\frac{259.37}{2.5937}=\frac{PV{\cancel{(2.5937)}}}{\cancel{2.5937}}\)</span></div>
                                     </li>
                                     <li>Adding and Subtracting is not necessary for this problem. The addition in this specific equation was taken care of in the parentheses.</li>
                                 </ul>
