--- a/not-on-server/originals/tvm1-exercises copy 18.html
+++ b/not-on-server/originals/tvm1-exercises copy 18.html
@@ -78,7 +78,7 @@
                         <div class="content">
 
                             <h4>Exercise 2: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
+                            <p>Enter the value of each variable in the boxes below. Then submit your answer.</p>
                             <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
@@ -505,7 +505,7 @@
                         <div class="content">
 
                             <h4>Exercise 6: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                             <div class="container">
                                 <div class="">
@@ -710,7 +710,7 @@
                         <div class="content">
 
                             <h4>Exercise 8: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
                             <div class="container">
                                 <div class="">
