--- a/tvm3/lecture3.html
+++ b/tvm3/lecture3.html
@@ -1183,7 +1183,7 @@
                         <div class="content">
 
                             <h4>Exercise 1: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</span></p>
+                            <p>Enter the value of each variable in the boxes below. Then submit your answer.</span></p>
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                             <div class="container">
                                 <div class="">
@@ -1551,7 +1551,7 @@
                         <div class="content">
 
                             <h4>Exercise 5: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">What if I deposited the $1200 a year at the beginning of the year for 20 years earning 8% interest? How much would the account be worth? <span class="note">(Hint: as an ordinary annuity, it was worth $54,914.36).</span></p>
                             <div class="container">
                                 <div class="">
@@ -1647,7 +1647,7 @@
                         <div class="content">
 
                             <h4>Exercise 6: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">How much more would an account be worth if you paid in $500 per quarter instead of $1000 semi-annually at 6% interest for 10 years?</p>
                             <div class="container">
                                 <div class="">
