--- a/ear/ear-6.html
+++ b/ear/ear-6.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Part 1</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../tvm-styles.css">
+
+    <title>TVM - Effective Annual Rate</title>
 </head>
 
 <body>
@@ -18,43 +20,34 @@
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
                     <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 2: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Then submit your answer.</p>
-                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
+
+                        <h4>Exercise 1: Solve for EAR</h4>
+                        <p>Enter the value of each variable in the boxes below.</p>
+                        <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
                         <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
+                            <form action="" class="indent">
+                                <label style="margin-left: 59px;">Interest (i)</label>
+                                <input id="int-ex6" type="number"><br>
+                                <label>Compounding (m)</label>
+                                <input id="cmpd-ex6" type="number"><br>
 
-                                    <label>Present Value (PV)</label>
-                                    <input id="Present Value (PV)alue-ex2" type="number"><br>
-
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex2" type="number"><br>
-
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex2" type="number"><br>
-
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex2" type="number"><br>
-
-                                </form>
-                                <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
+                            </form>
+                            <button type="button" class="btn ear calculate-btn">Submit</button>
                             <br>
-                            <div class="answer" id="answer-ex2"></div>
+                            <div class="answer" id="answer-ex6"></div>
                         </div>
                     </div>
                 </div>
@@ -64,13 +57,11 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="exerciseIntro-1.html" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="ear-5.html">Back</a>
+                    <a type="button" class="btn" href="ear-7.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
 
     </div> <!--  end of container -->
 
@@ -78,13 +69,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
     </script>
 
-    <script src="basics-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
