--- a/not-on-server/tvm2/lecture2.html
+++ b/not-on-server/tvm2/lecture2.html
@@ -1020,7 +1020,7 @@
                         <div class="content">
 
                             <h4>Exercise 2: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
+                            <p>Enter the value of each variable in the boxes below. Then submit your answer.</p>
                             <p class="question">If I deposit $2,000 in an account that earns a semi-annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
@@ -1385,7 +1385,7 @@
                         <div class="content">
 
                             <h4>Exercise 6: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
                             <div class="container">
                                 <div class="">
@@ -1467,7 +1467,7 @@
                         <div class="content">
 
                             <h4>Exercise 7: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly? <span class="note">(Enter two digits to the right of the decimal)</span></p>
                             <div class="container">
                                 <div class="">
@@ -1549,7 +1549,7 @@
                         <div class="content">
 
                             <h4>Exercise 8: Identify the Variables</h4>
-                            <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                            <p>Enter the value of each variable in the boxes below. </p>
                             <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
                             <div class="container">
                                 <div class="">
