--- a/tvm4/lecture4.html
+++ b/tvm4/lecture4.html
@@ -1663,7 +1663,7 @@
                     <div class="content">
 
                         <h4>Exercise 4: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What is the present value of an annuity due that pays $100 semi-annually for 10 years at 4% interest, if you already know that the PVA of an ordinary annuity with the same variables equals $1635.14? Use the general format of the TVM equation.</p>
                         <div class="container">
                             <div class="">
@@ -1962,7 +1962,7 @@
                     <div class="content">
 
                         <h4>Exercise 7: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What is the Present Value of an annuity due that pays $25 quarterly for 20 years with an 8% rate of return?</p>
                         <div class="container">
                             <div class="">
@@ -2261,7 +2261,7 @@
                     <div class="content">
 
                         <h4>Exercise 10: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
@@ -2364,7 +2364,7 @@
                     <div class="content">
 
                         <h4>Exercise 11: Calculate the unknown variable</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
@@ -2562,7 +2562,7 @@
                     <div class="content">
 
                         <h4>Exercise 13: Identify the Variables for PV of the Annuity (PVA)</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
@@ -2777,7 +2777,7 @@
                     <div class="content">
 
                         <h4>Exercise 15: Identify the Variables for the Lump Sum</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p>Enter the value of each variable in the boxes below. </p>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
