--- a/ear/ear-6.html
+++ b/ear/ear-6.html
@@ -27,13 +27,12 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-6.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
                         <h4>Exercise 1: Solve for EAR</h4>
                         <p>Enter the value of each variable in the boxes below.</p>
                         <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
@@ -45,7 +44,7 @@
                                 <input id="cmpd-ex6" type="number"><br>
 
                             </form>
-                            <button type="button" class="btn ear calculate-btn">Submit</button>
+                            <button type="button" class="btn ear calculate-btn">Calculate</button>
                             <br>
                             <div class="answer" id="answer-ex6"></div>
                         </div>
