--- a/ear/ear-help.html
+++ b/ear/ear-help.html
@@ -25,65 +25,29 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-8.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-6.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
                         <h4>Calculating Effective Annual Rate</h4>
+                        <hr>
                         <h5>Using the EAR equation</h5>
-                        <div class="bottom-space">
-                            <img src="../images/tvm2_ear_formula.png" class="img-fluid " alt="">
-                        </div>
                         <p>Plug your numbers into the EAR equation and solve for EAR:
                             <ul>
-                                <li>
-                                    First, calculate the number within the parentheses:
-                                    <div class="bottom-space">
-                                        <img src="../images/calc-ear1.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
-                                <li>Then, raise the number in the parentheses (1.008) by the exponent (4).
-                                    <div class="bottom-space">
-                                        <img src="../images/calc-ear2.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
-                                <li>Finally, subtract the 1 and convert the decimal to a percentage.
-                                    <div class="bottom-space">
-                                        <img src="../images/tvm2_ear_example_calculation_p6.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
+                                <li>First, calculate the number within the parentheses</li>
+                                <li>Then, raise the number in the parentheses by the exponent</li>
+                                <li>Finally, subtract the 1 and convert the decimal to a percentage</li>
                             </ul>
                         </p>
                         <h5>Using the TVM equation</h5>
-                        <div class="bottom-space">
-                            <img src="../images/tvm2_ear_from_tvm_help1.png" class="img-fluid " alt="">
-                        </div>
                         <p>Use the TVM equation to find EAR with these steps:
                             <ul>
-                                <li>
-                                    First, cancel PV on both sides of the equal sign. Insert the known variables, i and m, into the TVM equation.
-                                    <div class="bottom-space">
-                                        <img src="../images/tvm2_ear_from_tvm_help2.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
-                                <li>Calculate the number in the parentheses.
-                                    <div class="bottom-space">
-                                        <img src="../images/tvm2_ear_from_tvm_help3.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
-                                <li>Then, raise the number in the parentheses (1.008) by the exponent (4).
-                                    <div class="bottom-space">
-                                        <img src="../images/tvm2_ear_from_tvm_help4.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
-                                <li>Finally, subtract the 1 from both sides of the equal sign and convert the decimal to a percentage.
-                                    <div class="bottom-space">
-                                        <img src="../images/tvm2_ear_from_tvm_help5.png" class="img-fluid " alt="">
-                                    </div>
-                                </li>
+                                <li>First, cancel PV on both sides of the equal sign. Insert the known variables, i and m, into the TVM equation</li>
+                                <li>Calculate the number in the parentheses</li>
+                                <li>Then, raise the number in the parentheses by the exponent</li>
+                                <li>Finally, subtract the 1 from both sides of the equal sign and convert the decimal to a percentage</li>
                             </ul>
                         </p>
                         <hr>
@@ -104,20 +68,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn">Continue</button>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-5 col-sm-3">
-                    <div class="page-number">Help 2</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-    </div>
-
-    </div> <!--  end of container -->
+    </div><!--  end of container -->
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
