--- a/ear/ear-2.html
+++ b/ear/ear-2.html
@@ -13,6 +13,7 @@
 
     <title>TVM - Effective Annual Rate</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <div id="" class="slide stop">
@@ -25,7 +26,7 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-6.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
