--- a/not-on-server/ear-8.html
+++ b/not-on-server/ear-8.html
@@ -17,9 +17,9 @@
 <body>
     <div class="container-fluid">
 
-        <!---------------- SLIDE 36  - EXERCISES -->
-        <!-- exercises2-slide18 : problem 10  -->
-        <div id="exercises2-slide18" class="slide exercise-slide">
+        <!---------------- SLIDE 34  - EXERCISES -->
+        <!-- exercises2-slide16 : problem 9  -->
+        <div id="exercises2-slide16" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Compound Interest</h2>
@@ -29,53 +29,67 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./ear-6.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 10: Choose an Option</h4>
-
+                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
                         <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
-
+                        <p class="note">Note: Please round to 2 places after the decimal point.</span></p>
                         <div class="container">
                             <div class="">
-                                <form action="">
-                                    <label>A.</label>
-                                    <input id="ear-ex10a" name="option" value="optA" type="radio">Option A<br>
-                                    <label>B.</label>
-                                    <input id="ear-ex10b" name="option" value="optB" type="radio">Option B<br>
-                                    <label>C.</label>
-                                    <input id="ear-ex10c" name="option" value="optC" type="radio">Either, the options are similar<br>
+                                <form action="" class="indent">
+                                    <label>EAR of Option A:</label>
+                                    <input id="ear-ex9a" type="number" placeholder="00.00">%<br>
+                                    <label>EAR of Option B:</label>
+                                    <input id="ear-ex9b" type="number" placeholder="00.00">%<br>
                                 </form>
-                                <button onclick="exercise_10()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Calculate</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex10"></div>
-                            <h4>Exercise 10: Solution</h4>
-                            <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
-                            <h5>Choose Option A.</h5>
-                            <p>EAR of Option A = 10.52%<br>
-                                EAR of Option B = 10.51%</p>
-                            <p>With a higher EAR, the Future Value of Option A is higher than Option B.</p>
+                            <div class="answer" id="answer-ex9"></div>
+                        </div>
+                    </div>
+
+
+                    <h4>Exercise 9: Solution</h4>
+                    <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
+                    <p>EAR is calculated as follows:</p>
+                    <div>
+                        <h3>Option A</h3>
+                        <div class="math">
+                            &nbsp;&nbsp;= 10% or 0.10<br>
+                            = 365
+                        </div>
+                        <div class="bottom-space">
+                            <img src="../images/tvm2_question4_optiona.png" class="img-fluid " alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Option B</h3>
+                        <div class="math">
+                            &nbsp;&nbsp;= 10.25% or 0.1025<br>
+                            = 2
+                        </div>
+                        <div class="bottom-space">
+                            <img src="../images/tvm2_question4_optionb.png" class="img-fluid " alt="">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">36</div>
-                </div>
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="ear-10.html">Back</a>
-                    <a type="button" class="btn" href="ear-1.html">Restart</a>
-                </div>
-            </div>
-
         </div>
-
+        <div class="row">
+            <div class="col-1">
+                <div class="page-number"></div>
+            </div>
+            <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                <a type="button" class="btn" href="ear-7.html">Back</a>
+                <a type="button" class="btn" href="ear-9.html">Continue</a>
+            </div>
+        </div>
     </div> <!--  end of container -->
 
 
